# dynm

./: README.md  bump_version.sh  pyproject.toml  requirements.txt  setup.cfg  setup_template.cfg
src/dynm/: dynamic_model.py
src/dynm/sequencial/: filter.py  smooth.py
src/dynm/sub_model/: autoregressive.py  nullmodel.py  polynomial.py  regression.py  seasonal_fourier.py  transfer_function.py
src/dynm/superposition_block/: dlm.py  dnm.py
src/dynm/utils/: algebra.py  format_input.py  format_result.py  summary.py  validation.py
test/: run_tests.sh  test__AutoRegressive_TransferFunction.py  test__Autoregressive.py  test__Multiple_TransferFunction_PolyRatio.py  test__Multiple_TransferFuntion.py  test__Polynomial_Regression.py  test__Polynomial_Seasonal.py  test__Polynomial_delvar.py  test__TranferFunction.py  test__TransferFunction_PolyRatio.py
