[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "dynm"
version = "0.0.2"
description = "Bayesian Dynamic Models"
authors = ["Eduardo Pinheiro and André Menezes"]
license = "OSI Approved :: Apache Software License"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "2.0.3"
numpy = "1.24.4"
scipy = "1.10.1"
