[metadata]
name = dynm
version = 0.0.2
author = Eduardo Pinheiro and André Menezes
author_email = eduardo.pinheiro@murabei.com
description = Bayesian Dynamic Models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AndrMenezes/dynm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = /data*.csv
